<resources>
    <string name="app_name">KursachApp</string>
    <string name="navigation_drawer_open">Открыть navigation drawer</string>
    <string name="navigation_drawer_close">Закрыть navigation drawer</string>
    <string name="nav_header_title">KursachApp</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Описание</string>
    <string name="action_settings">Настройки</string>
    <string name="fab">Кнопка FAB</string>
    <string name="x_bar_content_desc">-</string>
    <string name="exercise_card_content_description_media">Описание</string>
    <string name="exercise_card_title">Название</string>
    <string name="exercise_card_secondary_title">Второе название</string>
    <string name="exercise_card_recycler_view_item">Задать предмет</string>
    <string name="exercise_name">Название</string>
    <string name="exercise_timer">Таймер</string>
    <string name="set_weights">Вес</string>
    <string name="set_reps">Колво</string>
    <string name="menu_exercise_list">Favorites</string>
    <string name="menu_workout_list">Scheduled</string>
    <string name="menu_add">Добавить</string>
    <string name="menu_import">Импортировать</string>
    <string name="menu_delete">Удалить</string>
    <string name="menu_filter">Фильтр</string>
    <string name="menu_order">Заказать</string>
    <string name="nav_home">Домой</string>
    <string name="nav_progress">Прогресс</string>
    <string name="nav_progress_details">Подробнее</string>
    <string name="nav_exercise_list">Упражнения</string>
    <string name="nav_exercise_details">Правка</string>
    <string name="nav_exercise_create">Создать упражнение</string>
    <string name="nav_exercise_import">Импортировать упражнение</string>
    <string name="nav_workout_list">Тренировки</string>
    <string name="nav_workout_details">Правка</string>
    <string name="nav_workout_create">Добавить тренировку</string>
    <string name="nav_workout_import">Импортировать тренировку</string>
    <string name="nav_workout_view_pager">Сессия тренировки</string>
    <string name="nav_workout_session">Сессия тренировки</string>
    <string name="nav_workout_stopwatch">Секундомер</string>
    <string name="nav_settings">Настройки</string>
    <string name="button_bar_cancel">Отменить</string>
    <string name="button_bar_accept">Сохранить</string>
    <string name="button_bar_finish">Закончить</string>
    <string name="button_start">Старт</string>
    <string name="button_stop">Стоп</string>
    <string name="button_lap">Круг</string>
    <string name="button_reset">Сбросить</string>
    <string name="button_resume">Продолжить</string>
    <string name="button_bar_back">Назад</string>
    <string name="undo">Отменить</string>
    <string name="image_check_mark">Галка</string>
    <string name="stopwatch_start_time">00:00.0</string>
    <string name="card_button_bar_edit">Править</string>
    <string name="card_button_bar_delete">Удалить</string>
    <string name="workout_reminder">Напоминание</string>
    <string name="workout_date">Дата</string>
    <string name="workout_default_reminder">None</string>
    <string name="workout_reminder_suffix"> до</string>
    <string name="notification_channel_name">Секундомер</string>
    <string name="notification_ticker">Тикер</string>
    <string name="notification_content_title">Заголовок</string>
    <string name="notification_content_text">Текст</string>
    <string name="next_workout_title">Будущее название</string>
    <string name="last_workout_title">Предыдущее название</string>
    <string name="delete_action">Удалено</string>
</resources>