<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item android:title="Меню" tools:ignore="hardcodedText">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/workout_navigation"
                        android:title="@string/nav_workout_list"
                        android:icon="@drawable/ic_baseline_fitness_center_24"
                        />
                    <item
                        android:id="@+id/nav_exercise_list"
                        android:title="@string/nav_exercise_list"
                        android:icon="@drawable/ic_stretch_svgrepo_com__1_"
                        />
                    <item
                        android:id="@+id/nav_progress"
                        android:title="@string/nav_progress"
                        android:icon="@drawable/ic_baseline_bar_chart_24"
                        />
                </group>
            </menu>
        </item>
    </group>
</menu>